--- a/pages/p8/952649.md
+++ b/pages/p8/952649.md
@@ -1,4 +1,4 @@
-### 外国人眼中 难以理解的“中国式”礼貌(图)
+### 如何快速整理工作流程（S.O.P.）？(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,14 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="礼貌 才艺 迪士尼 教育" src="https://img3.secretchina.com/pic/2020/7-11/p2729592a451729439-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="创意 思维 心智图 胡雅茹" src="https://img3.secretchina.com/pic/2020/11-15/p2818642a803700097-ss.jpg"/>
   <br>
-   外国人眼中，难以理解的“中国式”
-   <strong>
-    礼貌
-   </strong>
-   。（图片来源：Adobestock）
+   如何快速整理工作流程（S.O.P.）？（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -25,64 +21,76 @@
 
 ---
 
-#### [ 🎬  《红墙的记忆》- 4.25中南海万人和平上访纪实](http://141.164.39.94:10000/videos/legend/425.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  《永恒的五十分钟》（长春电视插播事件改编） ](http://141.164.39.94:10000/videos/news/ComingForYou-2.html)
-
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### [ 💥 李锐评习近平：没想到文化程度这么低（李锐是毛泽东秘书、习仲勋挚友、前中组部副部长）](http://141.164.39.94:10000/videos/res/Communist/lirui-xi.html)
-
-#### [ 💥 江泽民失态怒斥并威胁香港记者（ “图样图森破”，“谈笑风生” ）](http://141.164.39.94:10000/videos/res/realjzm/naive.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  每到了逢年过节的时候，中国父母带着孩子拜访亲友时，也是许多孩子感到头疼的事。因为这些孩子们不仅要面对各种三姑六婆的追问，还要在大人们面前拿出所学的“
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/才艺" target="_blank">
-    才艺
-   </span>
-  </strong>
-  ”，跟其他小孩一较高下，作为大人之间的余兴节目。
+  <span style="font-size:22px">
+   <strong>
+    如何快速整理出工作手册？
+   </strong>
+  </span>
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这时如果有孩子表现出不愿意和人打招呼，或是不愿意配合表演才艺时，通常就会被家长或是亲朋好友贴上“不懂事”、“不讨人喜欢”的标签。
+  带领新人或他人快速上手，是身为
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/职场" target="_blank">
+    职场
+   </span>
+  </strong>
+  资深人士的必备能力。
  </p>
  <p>
-  尤其近年来，随着社会发展，“中国式
-  <span href="https://www.secretchina.com/news/gb/tag/礼貌" target="_blank">
-   礼貌
+  目前手上的工作能有
+  <span href="https://www.secretchina.com/news/gb/tag/代理人" target="_blank">
+   代理人
   </span>
-  ”仿佛已成为家长间约定成俗的事情，但在外国人的眼里，这种所谓的“礼貌”却很难被他们所理解。
- </p>
- <p>
-  有次，一位网友带着5岁的儿子乘坐高铁，准备去上海
+  或备用人员处理的话，要请假、要升迁都会比较容易。一般情况下，多数人不喜欢担任职务
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/迪士尼" target="_blank">
-    迪士尼
-   </span>
+   代理人
   </strong>
-  乐园游玩一番。他们邻座坐着一位金发碧眼的外国男子，网友就热心的和这名外国男子聊了起来。
+  的角色，毕竟要了解自己未从事的职务总要经过一番摸索，会使得自己的工作效率变差，这时心智图就能派上用场了。
  </p>
  <p>
-  过程中，网友知道这名外国男子是上海某
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/教育" target="_blank">
-    教育
-   </span>
-  </strong>
-  机构的外籍教师，她觉得这是一个挺好的机会，就想让孩子施展所学，跟对方互动磨练一下。
+  稍具规模的公司，为求工作品质一致，会建立一套工作手册，让不熟练该工作内容者能有所依循。一般来说，操作性事务较容易建立详细且完整的标准作业流程（S.O.P.），换言之，容易建立S.O.P.的工作也是容易被机器人或人工智能（A.I.）取代的工作。
  </p>
  <p>
-  于是网友就要求孩子，表演一些平时学到的英文歌曲和英文单词。
+  往正面的角度思考，如果能把手上工作建立出S.O.P.，就有机会越快将这些低阶作业流程外包给机器人或人工智能或新人，让自己晋级处理更高阶的作业流程与承担更大的责任。
+ </p>
+ <p>
+  近几年许多新创公司，或有一定员工数的中小型企业，都希望自己的公司能像Google一样成为一流企业，自己能成为求职者心中的幸福企业，希望能招揽到一流优秀人才。但员工不是机器人，会有情绪的变化，就算是一流优秀的人才也会有难以突破的撞墙期，这时Google主管们与部属谈的内容常常是“有什么我可以帮你的？”“有什么事情降低了你的工作效率”，而非“你达成了多少目标？”
+  <sup>
+   <strong>
+    （注1）
+   </strong>
+  </sup>
+  。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="越快建立S.O.P.，就能越快将低阶作业流程外包给机器人或人工智能或新人，让自己处理更高阶的作业流程与承担更大的责任。" src="https://img3.secretchina.com/pic/2020/10-23/p2802572a816692258-ss.jpg"/>
+  <br>
+   越快建立S.O.P.，就能越快将低阶作业流程外包给机器人或人工智能或新人，让自己处理更高阶的作业流程与承担更大的责任。（图片来源：Adobestock）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -97,7 +105,7 @@
   </div>
  </center>
  <p>
-  但是孩子听了却不想配合，因为他满脑子想的都是迪士尼的卡通人物，无法理解为甚幺妈妈要在这时测试他的学习状况。
+  我发现一个现象，很多老板都不在意的事实：越是一流优秀的人才，越不想浪费时间在处理跟目标无关的事情，这才是真正留住人才的关键。老板要把“会降低A级人才的工作效率的事物拿掉”当成是最重要的事情。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -112,67 +120,13 @@
   </div>
  </center>
  <p>
-  网友见孩子不配合，于是不高兴的说：“你这样很没礼貌，叔叔等着你表演呢。妈妈要生气了！”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  孩子看着要生气的妈妈，开始委屈的哭了起来。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这时那名外国男子严肃的对网友说：“太太，我并不觉得孩子没礼貌，这种礼貌在我看来并不必要，所以也不应让孩子为此感到难过。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  网友听完，在安抚孩子后，就这个问题彼此交流了许久。而外国男子的一番话，也点醒了网友，让她对刚才强迫孩子的事进行了反思。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  其实这样的情况并不罕见，许多中国家长强加在孩子身上的“中国式礼貌”，或许彼此间已习以为常，但却会让外国友人觉得诧异不解。因为在他们看来，这样的行为并不算真正的礼貌，却会给孩子带来长远的伤害：
+  老板们务必要弄清楚，工作手册属于管理，并不属于领导。管理与领导完全不同，但两者都很重要。经理人是管理，把事做对。
+  <sup>
+   <strong>
+    （注2）
+   </strong>
+  </sup>
+  透过制作工作手册，也能促进反思工作流程的合理性与必要性。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,10 +142,7 @@
  </center>
  <p>
   <strong>
-   1
-  </strong>
-  <strong>
-   、以孩子的积极情绪为代价
+   第一步：从最容易的任务下手
   </strong>
  </p>
  <center>
@@ -207,7 +158,7 @@
   </div>
  </center>
  <p>
-  美国有项研究表明，强迫孩子与别人寒喧互动，常常会使孩子更反感这种事，这样的比例高达53%。
+  先从小单元开始，依照任务或设备，建立工作手册。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -222,7 +173,11 @@
   </div>
  </center>
  <p>
-  而在调查中，有一项解释是强迫问候时，大多会以孩子的积极情绪为代价，久而久之，孩子就不愿再受到逼迫，尤其是他们发现自己有拒绝的权利后。
+  这跟整理家务的道理是一样的，先从一小块地方（例如书桌）做起，不要从一整个空间（例如书房）开始整理，这样你才不会觉得难度好高而放弃。一项任务或一项设备就画成一张
+  <span href="https://www.secretchina.com/news/gb/tag/心智图" target="_blank">
+   心智图
+  </span>
+  ，即使这张心智图上文字量很少也没关系。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -236,43 +191,11 @@
    </center>
   </div>
  </center>
- <p>
-  <strong>
-   2
-  </strong>
-  <strong>
-   、把自己的意志强加在孩子身上
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  以“意志强加”为基础的礼貌，也算不上真正的礼貌。因为我们认识的人，不一定是孩子熟悉的人，所以我们想让孩子表现的事情，也可能是孩子不愿意做的事情。这些全都是“意志强加”的结果，并不是孩子真正需要的“礼貌”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  那么又该如何让孩子体现真正的礼貌与教养呢？
+ <p style="text-align: center;">
+  <img alt="这跟整理家务的道理是一样的，先从一小块地方（例如书桌）做起，不要从一整个空间（例如书房）开始整理" src="https://img3.secretchina.com/pic/2020/1-22/p2609202a389065-ss.jpg"/>
+  <br>
+   这跟整理家务的道理是一样的，先从一小块地方（例如书桌）做起，不要从一整个空间（例如书房）开始整理。（图片来源：Adobestock）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -288,10 +211,94 @@
  </center>
  <p>
   <strong>
-   1
+   <sup>
+    注1
+   </sup>
+   ：
   </strong>
+  仆人式领导（Servant Leadership）由罗伯特．K．格林里夫（Robert K.Greenleaf）提出，此类领导者以身作则，乐意成为仆人，以服侍来领导。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
   <strong>
-   、经常使用感谢语
+   <sup>
+    注2
+   </sup>
+   ：
+  </strong>
+  美国管理大师华伦．班尼斯（Warren Bennis）：“管理意味执行、完成、掌管、负责与处理⋯⋯经理人重行政，领导人重创新⋯⋯经理人以体制与架构为本，领导人以人为本⋯⋯经理人看得较短，领导人看得较长⋯⋯经理人接受现状，领导人挑战现状⋯⋯结论是经理人把事情做对，领导人做对的事情。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  我自己的习惯是先从容易的、简单的任务先下手。制作工作手册对我来说，只是任务的汇整与记录，低乐趣度的事情。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  若从复杂的、困难的任务先下手，势必花费不少时间而觉得一直处于未完成的状态，这样心情会不好。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  就像是玩游戏过关一样，先从困难度低的关卡开始，这样很容易就累积出自己每次都在前进的成就感。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   第二步：整理手上所有的任务
   </strong>
  </p>
  <center>
@@ -307,7 +314,7 @@
   </div>
  </center>
  <p>
-  有很多父母会教育自己的孩子，在外面感谢别人时要说谢谢、不客气等感谢语。这些礼貌的常用语，应该时常让孩子挂在嘴边，习惯成自然。
+  开始汇整手上所有的任务或设备，画出一张类似书籍大纲概念的心智图。那么刚刚第一步中所画的那些心智图，立即成为本图的“mini mind map”（心智图中的心智图）了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -325,8 +332,26 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/11-14/p2817802a583897019-ss.jpg"/>
+  <br>
+   （图片来源：采实文化提供）
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  “好话一句三冬暖，恶言半句六月寒”，有时一声道谢，可以让人心里感到暖和舒服，孩子也能真正受人欢迎。
+  每年都要进行一次的办公室大扫除，可能都是由不同的人来进行，若是能建立一张大扫除后如何归位的心智图，那么不管是谁来进行，都能快速完成。另外，若今年有需要微调之处，进行者也只要修改本张工作手册心智图即可。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -342,10 +367,90 @@
  </center>
  <p>
   <strong>
-   2
+   第三步：定期整理工作手册
   </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  可以每隔半年或每一年就重新思考一下，还有哪些部分需要删与减，删减过后才可以填写新增的部分。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这样做的原因是为了要避免我们大脑偷懒，一旦先新增，大脑就会觉得这张心智图完成了（禀赋效应关系），就懒得再去思考还可以再减化哪些流程。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  若工作手册超过半年都完全没有更新，表示我们不断使用过去习惯在处理事情，大脑已经停止思考是否有精益求精的可能性了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  切记！所谓的“整理”，就是要“去芜存菁”，不是把现有的东西重新排列喔。
+  <br>
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
   <strong>
-   、遵守公共秩序
+   本文整理、节录自胡雅茹《
+   <span href="https://www.books.com.tw/products/0010874626">
+    极速解决工作难题的心智图大全
+   </span>
+   》一书，文章仅代表作者个人立场和观点。由采实文化授权转载，欲阅读完整作品，欢迎参考原书。
   </strong>
  </p>
  <center>
@@ -360,102 +465,7 @@
    </center>
   </div>
  </center>
- <p>
-  孩子大多喜欢玩，面对各种热闹的场所，也常会充满好奇心。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  例如坐公交车的时候，可以鼓励孩子给老人让座。吃过的果皮纸屑都要扔进垃圾桶，不随地乱丢。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这些在成人眼中，或许是习以为常的事情，但如果一个孩子也这么做，表示他的家教是很好的。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   3
-  </strong>
-  <strong>
-   、尽量不麻烦父母
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  要教会孩子独立，自己的事情自己做，如此一来，孩子长大后，在工作上也更容易独当一面，生活中也会让人觉得靠谱，值得信任，而不是为人所诟病的“妈宝”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  教养对一个孩子来说非常重要，会影响到孩子将来的发展方向，因此，家长们要重视孩子的家教，从小培养孩子各种好习惯，让孩子成为一个有教养的人。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style=" margin-bottom: 8px; ">
+ <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
@@ -472,6 +482,11 @@
   </span>
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
+   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+   </span>
+  </center>
+  <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
     </div>
@@ -485,7 +500,7 @@
   </center>
   <center>
    <div>
-    <div id="txt-mid2-t22-2017" style="display: block;  max-height: 351px;  overflow: hidden;">
+    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
      <div id="SC-21xx">
      </div>
      <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
@@ -500,13 +515,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/939312.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/939312.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/939312.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/07/11/939312.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/952649.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/952649.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/952649.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/15/952649.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/939312.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/952649.md' width='0px' height='0px'/>
