--- a/pages/nf4514/n12550675.md
+++ b/pages/nf4514/n12550675.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11·15】加州华人不要社会主义" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/11-25.jpg"/>
+<div><img alt="【大选更新11·15】加州州长被判违宪" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/11-28-600x400.jpg"/>
 <div class="caption">
- 11月14日，很多加州华人参加集会支持川普。图为一家华人四口来到挺川集会现场声援。（徐绣惠／大纪元）
+ 图为加利福尼亚州州长加文·纽瑟姆（Gavin Newsom），他被法官判决在选举问题上违宪。 (Rich Pedroncelli/Pool/AP Photo)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
