--- a/pages/p3/952343.md
+++ b/pages/p3/952343.md
@@ -1,4 +1,4 @@
-### 华人学者：微信是海外华人的陷阱 需认真对待(图)
+### 笨囚用这种方式越狱 网民笑翻(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="川普 微信 监控 " src="https://img3.secretchina.com/pic/2020/8-7/p2749362a30364018-ss.jpg" style="height:400px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="越狱 监狱 巴西" src="https://img3.secretchina.com/pic/2020/9-22/p2781411a66072857-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   有华人学者认为，微信是海外华人的陷阱，需认真对待。（图片来源：MARTIN BUREAU/AFP via Getty Images）
+   监狱（示意图/非本文图片/图片来源：Pixabay)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,63 +21,58 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《大裤衩》第一集 - 揭秘央视电视台《焦点追踪》节目组的幕后故事](http://141.164.51.119:10000/videos/news/../res/big-shorts/index.html)
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
-
-#### [ 🔥  走出文化亡国第十集 伪专家和造新闻 － 中共宣传机器愚弄民众的两个“致命暗器”](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月25日讯】自从美国总统
+  【看中国2020年11月16日讯】（看中国记者苏菲综合报导）近日，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-    川普
+   <span href="https://www.secretchina.com/news/gb/tag/巴西" target="_blank">
+    巴西
    </span>
-   (特朗普)
   </strong>
-  于8月6日发布对
+  传出一起
   <strong>
-   微信
+   集体越狱
   </strong>
-  的禁令后，引来在美华人圈的热议，有人赞成有人反对。国际非政府组织“人权观察”（Human Rights Watch）中国研究员
+  事件，12名囚犯合力挖出一条地道，从小巷子地底下破砖而出，以为神不知鬼不觉。没想到他们逃狱的画面全部被路口
   <strong>
-   王亚秋
+   监控
   </strong>
-  即认为，微信不仅是超级程序，也是海外华人的陷阱，应予以认真对待
+  给录了下来。狱方发现有人逃狱，立即展开追捕。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  美国中文媒体报道，王亚秋在《外交政策》撰文指出，
-  <span href="https://www.secretchina.com/news/gb/tag/微信" target="_blank">
-   微信
+  <strong>
+   12囚犯挖道
+   <span href="https://www.secretchina.com/news/gb/tag/越狱" target="_blank">
+    越狱
+   </span>
+   被监控全拍下来
+  </strong>
+ </p>
+ <p>
+  综合外媒报导，当地时间11月10日上午，巴西Pato Branco 公共监狱发生一起越狱事件。12名囚犯在监狱内挖掘一条隧道，先通往监狱医疗中心的地下水道，再从一处小巷钻出来逃跑。
+ </p>
+ <p>
+  不过，这12个囚犯没想到的是，他们越狱的画面被
+  <span href="https://www.secretchina.com/news/gb/tag/监控" target="_blank">
+   监控
   </span>
-  之所以能拥有上亿用户，与中共的“威逼利诱”政策有关——中共政府将外国科技公司拒之门外，还设立了“长城防火墙”；同时，它扶持了诸如微信之类的少数国内平台，助其审查和监督用户，在发现所谓的敏感信息时将用户数据移交给中共政府。
+  全部拍了下来。
  </p>
  <p>
-  王亚秋表示，她常常碰到的一个问题就是，她采访的一些华人常常只使用微信进行联系。她说，任何想与中国人建立联系的境外人士都必须使用在中国可用的资源，从而被中共政府审查和监视机制吸了进去。
+  警方说，囚犯逃出后有车辆接应。
  </p>
  <p>
-  在习惯将微信作为主要通信工具后，用户们随即发现，微信还可以作为新闻信息来源。这样，中共的谎言洗脑机制又隆重登场。
- </p>
- <p>
-  澳洲一项研究发现，微信账号专为中国移民发布的新闻，与提供中文内容的澳大利亚政府特殊广播服务公司（SBS）发布的新闻存在明显差异。
- </p>
- <p>
-  另外，王亚秋认为，当华人在微信的生态系统中生活时，会意识到微信的审查和监视，并可能在不知不觉中进行自我审查。
+  目前他们已经抓回了5名逃犯，剩下7人还在逃亡。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -92,7 +87,7 @@
   </div>
  </center>
  <p>
-  她写道：“政府的审查规则从来都是不明确的，执行起来却都是一样的，没有人知道红线在哪里。所以为了安全起见，你尽量远离敏感问题。当你不能谈论某件事情时，你会逐渐学会在第一时间避免去想它。当自我审查成为一种根深蒂固的行为后，转而生活在自由的环境中，并不意味着你能立即摆脱旧习惯。它可能需要一生的时间。”
+  警方呼吁民众留意，嫌犯逃跑时穿着日常服装，要特别注意满身泥泞的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -107,7 +102,9 @@
   </div>
  </center>
  <p>
-  她呼吁华人摆脱微信。
+  <strong>
+   笨囚想从送餐口越狱 被卡中间痛的哇哇大叫
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -122,7 +119,37 @@
   </div>
  </center>
  <p>
-  对此，有网友表示，“这使我想起满清下台时屁民们被要求剪辫子，分明是对他们的解放，但他们还是一片哭嚎，痛不欲生。微信就是当代的辫子，早剪早超生。”
+  《太阳报》报导，2016年，巴西一男子因抢劫被逮，被关在警局内，但他竟异想天开，想从门上的送餐口钻出。结果他的头虽然可以穿过送餐口那个狭小的窗口，但身体却钻不过去，结果整个人卡在门上，动弹不得。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  警方发现后曾尝试把男子从门上直接拉出来，但未果。后来拿出油来涂抹该男子的身体，希望能把他拉出来。但这招也没用，在拔男子时，反而让他痛得哇哇大叫。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  警察最后只好把门给卸下来，并砸碎门板，废了九牛二虎之力，才把这名笨囚解救出来。报导还称，该名男子因抢劫珠宝店被捕，当他被逮带到警局时，还试图贿赂警察，希望能放他一马。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -154,7 +181,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -186,13 +213,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944052.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944052.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/944052.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/25/944052.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952343.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952343.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/952343.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/16/952343.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/944052.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/952343.md' width='0px' height='0px'/>
