--- a/pages/nf4514/n12550675.md
+++ b/pages/nf4514/n12550675.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11·15】川普：我绝不认输！" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229154522-600x400.jpg"/>
+<div><img alt="【大选更新11·15】鲍威尔：准备翻转大选结果" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229154522-600x400.jpg"/>
 <div class="caption">
  川普周日上午表示：
 
