--- a/pages/nsc412/n12550675.md
+++ b/pages/nsc412/n12550675.md
@@ -1,11 +1,11 @@
-### 【大选更新11·15】川普：我绝不认输！
+### 【大选更新11·15】鲍威尔：准备翻转大选结果
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【大选更新11·15】川普：我绝不认输！" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229154522-600x400.jpg"/>
+<div><img alt="【大选更新11·15】鲍威尔：准备翻转大选结果" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229154522-600x400.jpg"/>
 <div class="caption">
  川普周日上午表示：
 
@@ -17,7 +17,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年11月15日讯】（大纪元记者徐简、戴芙若综合报导）
+ 【大纪元2020年11月15日讯】（大纪元记者徐简、戴芙若、谢佳宣综合报导）
  <ok href="https://www.epochtimes.com/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E9%80%89.html">
   美国大选
  </ok>
@@ -75,6 +75,29 @@
  </ok>
  情况的实时更新：
 </h4>
+<h3>
+ 鲍威尔：我们准备好推翻多个州的选举结果
+</h3>
+<p>
+ <a>
+  川普
+ </ok>
+ 团队律师、前联邦检察官
+ <a>
+  西德尼・鲍威尔
+ </ok>
+ （
+ <a>
+  Sidney Powell）
+ </ok>
+ 在周日的一次采访中表示，他们还有更多关于选民欺诈和违规行为的证据。
+</p>
+<p>
+ 鲍威尔说：“我们已经准备好推翻多个州的选举结果，”她说，她有足够的选举舞弊证据，可以开展广泛的刑事调查。
+</p>
+<p>
+ 鲍威尔在2019年成为前国家安全顾问迈克尔‧弗林（Michael Flynn）的法律顾问。在过去几天中，她被任命为川普法律团队的一员。
+</p>
 <h3>
  川普：拜登只是在假新闻眼里赢了 我绝不认输！
 </h3>
@@ -472,6 +495,8 @@
   <p>
    责任编辑：李玲
   </p>
+  <div id="gtx-trans" style="position: absolute; left: 5px; top: 944.935px;">
+  </div>
  </p>
 </p></div>
 <hr/>
